[gd_scene load_steps=11 format=3 uid="uid://dqg64cgj28gpd"]

[ext_resource type="Script" path="res://Menus/UpgradeSelectionMenu/upgrade_selection_menu.gd" id="1_o275p"]
[ext_resource type="Script" path="res://Menus/UpgradeSelectionMenu/replace_upgrade_label.gd" id="2_2jnw8"]
[ext_resource type="Texture2D" uid="uid://c8rwnovtuiom4" path="res://Menus/UpgradeSelectionMenu/UpgradeOption/Upgrade Skip.png" id="3_44586"]

[sub_resource type="LabelSettings" id="LabelSettings_mns33"]
font_size = 24

[sub_resource type="LabelSettings" id="LabelSettings_bnji2"]
font_size = 24

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6202f"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ff82b"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_40w13"]
bg_color = Color(1, 1, 1, 0.0666667)
corner_radius_top_left = 24
corner_radius_top_right = 24
corner_radius_bottom_right = 24
corner_radius_bottom_left = 24

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ss61u"]
bg_color = Color(0, 0, 0, 0.0666667)
corner_radius_top_left = 24
corner_radius_top_right = 24
corner_radius_bottom_right = 24
corner_radius_bottom_left = 24

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_omnuu"]

[node name="UpgradeSelectionMenu" type="Node2D"]
z_index = 1
position = Vector2(960, 540)
script = ExtResource("1_o275p")

[node name="ReplaceUpgradeLabel" type="Label" parent="."]
offset_left = -605.0
offset_top = -400.0
offset_right = -299.0
offset_bottom = -375.0
text = "Select an upgrade to replace"
label_settings = SubResource("LabelSettings_mns33")
script = ExtResource("2_2jnw8")

[node name="ConditionOptions" type="HBoxContainer" parent="."]
offset_left = -500.0
offset_top = -300.0
offset_right = 500.0
offset_bottom = -260.0
alignment = 1

[node name="UpgradesTriggerOrderLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -438.0
offset_top = -11.0
offset_right = 438.0
offset_bottom = 23.0
grow_horizontal = 2
text = "Upgrades trigger from left to right. New upgrades will be added to the right."
label_settings = SubResource("LabelSettings_bnji2")
horizontal_alignment = 1
vertical_alignment = 1

[node name="UpgradeOptions" type="HBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -603.0
offset_top = 109.0
offset_right = 609.0
offset_bottom = 409.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 32
alignment = 1

[node name="ContinueBG" type="Sprite2D" parent="."]
position = Vector2(0, 459)
texture = ExtResource("3_44586")

[node name="ContinueButton" type="Button" parent="ContinueBG"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -132.0
offset_top = -42.0
offset_right = -9.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 16
theme_override_styles/focus = SubResource("StyleBoxEmpty_6202f")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_ff82b")
theme_override_styles/hover = SubResource("StyleBoxFlat_40w13")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ss61u")
theme_override_styles/normal = SubResource("StyleBoxEmpty_omnuu")
text = "Continue"

[connection signal="mouse_entered" from="ContinueBG/ContinueButton" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="ContinueBG/ContinueButton" to="." method="_on_continue_button_pressed"]
